--- a/common/head.html
+++ b/common/head.html
@@ -1,5 +1,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script type="text/discourse-plugin" version="0.8.7">
+
+
+    // Register Instagram Component
     api.registerConnectorClass('user-profile-primary', 'instagram-link', {
       setupComponent(args, component) {
         component.set('instagramLink', args.model.get('instagramLink'));
@@ -11,6 +14,19 @@
         component.set('instagramLink', args.user.get('instagramLink'));
       }
     });
+
+    // Register Linkedin Component
+    api.registerConnectorClass('user-profile-primary', 'linkedin-link', {
+      setupComponent(args, component) {
+        component.set('linkedinLink', args.model.get('linkedinLink'));
+      }
+    });
+    api.registerConnectorClass('user-card-after-metadata', 'linkedin-link', {
+      setupComponent(args, component) {
+        component.set('linkedinLink', args.user.get('linkedinLink'));
+      }
+    });
+
 
     api.modifyClass('model:user', {
       instagramLink: function() {
@@ -25,16 +41,38 @@
             if (userFields && userFields[userFieldId]) {
               const url = "https://instagram.com/" + userFields[userFieldId];
               const link = "<a href='"+url+"' target='_blank'>@"+userFields[userFieldId]+"</a>";
-              const link_icon = "<a href='"+url+"' target='_blank' class='fa fa-instagram'>"+"</a>";
+            //   const link_icon = "<a href='"+url+"' target='_blank' class='fa fa-instagram'>"+"</a>";
               return Ember.Object.create({ link, name: instagramUsernameField.get('name') });
             } else {
               return null;
             }
           }
+      }.property('user_fields.@each.value');
+
+      linkedinLink: function() {
+          const siteUserFields = Discourse.Site.currentProp('user_fields');
+          if (!Ember.isEmpty(siteUserFields)) {
+            const linkedinLinkField = siteUserFields.filterBy('name', 'Linkedin Profile')[0]
+            if (!linkedinLinkField) {
+              return null;
+            }
+            const userFieldId = linkedinLinkField.get('id');
+            const userFields = this.get('user_fields');
+            if (userFields && userFields[userFieldId]) {
+              const url = userFields[userFieldId];
+              const link = "<a href='"+url+"' target='_blank'>Linkedin Profile</a>";
+            //   const link_icon = "<a href='"+url+"' target='_blank' class='fa fa-instagram'>"+"</a>";
+              return Ember.Object.create({ link, name: linkedinLinkField.get('name') });
+            } else {
+              return null;
+            }
+          }
       }.property('user_fields.@each.value')
+
     });
 </script>
 
+<!-- INSTAGRAM -->
 <script type='text/x-handlebars' data-template-name='/connectors/user-profile-primary/instagram-link'>
   {{#if instagramLink}}
     <div class="public-user-fields">
@@ -58,3 +96,26 @@
     </h3>
   {{/if}}
 </script>
+
+
+<!-- LINKEDIN -->
+<script type='text/x-handlebars' data-template-name='/connectors/user-profile-primary/linkedin-link'>
+    {{#if linkedinLink}}
+      <div class="public-user-fields">
+        <div class="public-user-field">
+          <span class="user-field-name">{{linkedinLink.name}}</span>:
+          <span class="user-field-value">{{{linkedinLink.link}}}</span>
+        </div>
+      </div>
+    {{/if}}
+  </script>
+  
+  
+  <script type='text/x-handlebars' data-template-name='/connectors/user-card-after-metadata/linkedin-link'>
+    {{#if linkedinLink}}
+      <h3 class="user-card-public-field">
+          <span class="user-field-name">{{linkedinLink.name}}</span>:
+          <span class="user-field-value">{{{linkedinLink.link}}}</span>
+      </h3>
+    {{/if}}
+  </script>
