add support for youtube profiles

--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -27,7 +27,16 @@
                 type: 'userField',
                 value: settings.linkedin_custom_field_name
             }
-        }
+        },
+        {
+            name: 'YouTube',
+            icon: 'fab-youtube',
+            link: {
+                type: 'userField',
+                value: settings.youtube_custom_field_name,
+                base: 'https://youtube.com/c/'
+            }
+        },
     ]
     
     fieldOptions.userIconicUserFields = fieldOptions.iconicUserFields
