remove base url req for youtube profile field

--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -35,9 +35,7 @@
             icon: 'fab-youtube',
             link: {
                 type: 'userField',
-                value: settings.youtube_custom_field_name,
-                base: 'https://youtube.com/c/',
-                baseregex: '^https(s)?://(www.)?youtube.com/c/'
+                value: settings.youtube_custom_field_name
             }
         },
     ]
