add discord html links

--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -38,6 +38,14 @@
                 value: settings.youtube_custom_field_name
             }
         },
+        {
+            name: 'Discord',
+            icon: 'fab-discord',
+            link: {
+                type: 'userField',
+                value: settings.discord_custom_field_name
+            }
+        },
     ]
     
     fieldOptions.userIconicUserFields = fieldOptions.iconicUserFields
