--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -46,6 +46,14 @@
                 value: settings.discord_custom_field_name
             }
         },
+        {
+            name: 'Steam',
+            icon: 'fab-steam',
+            link: {
+                type: 'userField',
+                value: settings.steam_custom_field_name
+            }
+        },
     ]
     
     fieldOptions.userIconicUserFields = fieldOptions.iconicUserFields
