update the icons

--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -52,7 +52,7 @@
         },
         {
             name: 'Email',
-            icon: 'fa-envelope-square',
+            icon: 'fab-envelope-o',
             link: {
                 type: 'userField',
                 value: settings.email_custom_field_name
@@ -114,8 +114,8 @@
             link: {
                 type: 'userField',
                 value: settings.telegram_custom_field_name,
-                base: 'https://t.me/',
-                baseregex: '^http(s)?://(www.)?t.me/'
+                base: 't.me/',
+                baseregex: '^(https://)?t.me/'
             }
         },
     ]
