change font awesome

--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -52,7 +52,7 @@
         },
         {
             name: 'Email',
-            icon: 'fab-envelope-o',
+            icon: 'fa-envelope-o',
             link: {
                 type: 'userField',
                 value: settings.email_custom_field_name
@@ -100,7 +100,7 @@
         },
         {
             name: 'Tiktok',
-            icon: 'fab-tiktok',
+            icon: 'fa-tiktok',
             link: {
                 type: 'userField',
                 value: settings.tiktok_custom_field_name,
