update envelope icon

--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -52,7 +52,7 @@
         },
         {
             name: 'Email',
-            icon: 'fa-envelope-o',
+            icon: 'envelope',
             link: {
                 type: 'userField',
                 value: settings.email_custom_field_name
