update readme to show tiktok issue

--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -100,7 +100,7 @@
         },
         {
             name: 'Tiktok',
-            icon: 'fa-tiktok',
+            icon: 'fab-tiktok',
             link: {
                 type: 'userField',
                 value: settings.tiktok_custom_field_name,
