--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -124,7 +124,7 @@
             link: {
                 type: 'userField',
                 value: settings.telegram_custom_field_name,
-                base: 't.me/',
+                base: 'https://t.me/',
                 baseregex: '^(https://)?t.me/'
             }
         },
