--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -23,8 +23,8 @@
             }
         },
         {
-            name: 'Twitter',
-            icon: 'fab-twitter',
+            name: 'X',
+            icon: 'temporary-twitter-x',
             link: {
                 type: 'userField',
                 value: settings.twitter_custom_field_name,
